# safeyield

./: README.md  app.py  data_pipeline.py  guidelines.md  pyproject.toml  report.qmd  wildfire.ipynb
Data/: All_data_1980_2021_grouped_centroids.csv
Data/incendios-forestales_portugal/: incendios-forestales ontology.url
Data/incendios-forestales_portugal/TTL/: Portugal_1980-2000_Values.ttl
Data/processed/: zone_impact.csv
