[project]
name = "general"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pydeck>=0.9.2",
    "quarto>=0.1.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "streamlit>=1.57.0",
]
